--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -9,6 +9,9 @@ Fix poll example failure on microblaze platform.
 llfifo_v5_3:
 Fix poll and interrupt examples receive programming sequence.
 
+wdttb_v4_4:
+Fixed compiler warning.
+
 xxvethernet_v1_2:
 In tcl use unique global variables to fix bsp generation for certain designs.
 
