--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -15,6 +15,9 @@ Fix poll and interrupt examples receive programming sequence.
 wdttb_v4_4:
 Fixed compiler warning.
 
+xilffs_v4_1:
+Add additional LFN options in mld.
+
 xxvethernet_v1_2:
 In tcl use unique global variables to fix bsp generation for certain designs.
 
