--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -8,6 +8,7 @@ Fix poll example failure on microblaze platform.
 
 ipipsu_v2_5:
 Make IPI driver common for both ZynqMP and Versal platforms.
+Add extern c macro.
 
 llfifo_v5_3:
 Fix poll and interrupt examples receive programming sequence.
