--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -6,6 +6,9 @@ In tcl use unique global variables to fix bsp generation for certain designs.
 emaclite_v4_4:
 Fix poll example failure on microblaze platform.
 
+hwicap_v11_2:
+Updated the Number of words per frame as mention in the ug570.
+
 ipipsu_v2_5:
 Make IPI driver common for both ZynqMP and Versal platforms.
 Add extern c macro.
