--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -21,6 +21,9 @@ lwip211_v1_0:
 Upgrade lwip to open source version 2.1.1
 Fix cache handling in RX path for GEM.
 
+spips_v3_3:
+Resolved MISRA-C:2012 violations in safety mode(CR#1016116)
+
 ttcps_v3_8:
 Modified in XTtcPs_ClearInterruptStatus function to clear
 interrupt status register by reading instead of writing it.
