--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -20,6 +20,7 @@ Fix poll and interrupt examples receive programming sequence.
 lwip211_v1_0:
 Upgrade lwip to open source version 2.1.1
 Fix cache handling in RX path for GEM.
+Fix freertos echo server compilation on emaclite platform.
 
 spips_v3_3:
 Resolved MISRA-C:2012 violations in safety mode(CR#1016116)
